erDiagram
  SUPPORT_TICKETS ||--o{ TICKET_MESSAGES : "ticket_id"
  NOTIFICATIONS ||--o{ NOTIFICATION_LOGS : "notif_id"
  SUPPORT_TICKETS {
    uuid ticket_id PK
    uuid visitor_id FK
    uuid user_id FK
    uuid campaign_id FK
    support_ticket_status status
    uuid assigned_to FK
  }
  TICKET_MESSAGES {
    uuid message_id PK
    uuid ticket_id FK
    uuid author_id
    string author_role
  }
  NOTIFICATIONS {
    uuid notif_id PK
    uuid user_id FK
    notif_type type
    string title
    uuid entity_id
    string entity_type
  }
  NOTIFICATION_LOGS {
    uuid log_id PK
    uuid notif_id FK
    send_status send_status
  }
  MASS_EMAIL_CAMPAIGNS {
    uuid campaign_id_seq PK
    uuid admin_id FK
  }
  MASS_WHATSAPP_CAMPAIGNS {
    uuid campaign_id_seq PK
    uuid admin_id FK
    green_api_status green_api_status
  }
  AUDIT_LOGS {
    uuid audit_id PK
    uuid actor_id
    string actor_role
    audit_action action_type
    string entity_type
    uuid entity_id
  }
  PLATFORM_ALERTS {
    uuid alert_id PK
    alert_type type
    uuid entity_id
  }
  ANOMALY_DETECTIONS {
    uuid anomaly_id PK
    uuid poll_id FK
    anomaly_type type
    anomaly_status status
  }